[BUGFIX] decrease z-index of pagetree-contextmenu
Resolves: #29077
Releases: master
Reviewed-on: http://review.typo3.org/41635
Tested-by: Benjamin Mack <benni@typo3.org>
Tested-by: Christian Kuhn <lolli@schwarzbu.ch>

--- a/typo3/sysext/t3skin/Resources/Public/Css/backend.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/backend.css
@@ -9687,6 +9687,12 @@ ul.typo3-messages {
   top: 5px;
   position: absolute;
 }
+.x-menu-floating {
+  z-index: 50 !important;
+}
+.x-shadow {
+  z-index: 40 !important;
+}
 #typo3-browse-links-php {
   background: #ececec;
   background-image: linear-gradient(center top, #ffffff 30px, #ececec 130px);
